--- a/5_计算机网络/01_7层模型.md
+++ b/5_计算机网络/01_7层模型.md
@@ -49,3 +49,34 @@
         <td>9.6Kbps ~ 45Mbps</td>
     </tr>
 </table>
+
+
+总线型（利用率低、干扰大、价格低）
+星型（交换机形成的局域网、中央单元负荷大）
+环型（流动方向固定、效率低扩充难）
+树型（总线型的扩充，分级结构）
+分布式（任意节点连接、管理成本高）
+
+## 通信技术
+
+计算机网络是<font color='red'>利用通信技术将数据从一个节点传送到另一个节点的过程</font>。通信技术是计算机网络的基础。信道可分为<font color='red'>物理信道</font>和<font color='red'>逻辑信道</font>。物理信道由传输介质和设备组成，根据传输介质的不同，分为无线信道和有线信道。逻辑信道是指在数据发送端和接收端之间存在的一条虚拟线路，可以是有连接的或无连接的。逻辑信道以物理信道为载体
+
+<font color='red'>发信机进行的信号处理</font>包括信源编码、信道编码、交织、脉冲成形和调制。相反的，收信机进行的信号处理包括解调、采样判决、去交织、信道译码和信源译码。
+如果<font color='red'>同时传递多路数据就需要复用技术和多址技术</font>。**复用技术**是指在一条信道上同时传输多路数据的技术，如TDM时分复用、FDM频分复用、CDM码分复用等。**多址技术**是指在一条线上同时传输多个用户数据的技术，在接收端把多个用户数据的技术，在接收端把多个用户的数据分离（TDMA时分多址、FDMA频分多址、CDMA码分多址）。
+
+作为<font color='red'>新一代的移动通信技术，5G</font>特征体现在一下方面：
+1. 基于`OFDM`优化的波形和多址接入
+2. 实现可扩展的`OFDM`间隔参数配置
+3. `OFDM`加窗提高多路传输效率
+4. 灵活框架设计
+5. 大规模`MIMO`：最多256根天线
+6. 毫米波：频率大于24GHZ以上的频率
+7. 频谱共享
+8. 现金的信道编码设计
+
+5G网络的主要特征：服务化架构、网络切片
+
+
+## OSI七层模型
+
+1. **物理层**，<font color='red'>在链路上透明地传输</font>。需要完成工作包括线路配置、确定数据传输模式、确定信号形式、对信号进行编码、连接传输介质。为此定义了建立、维护、和拆除物理链路所具备的机械特性、电气特性、功能特性以及规程特性。单位
